SERVER-30183 ensure a moveChunk that joins the active moveChunk has the same waitForDelete option

(cherry picked from commit 0578fe2bf94f66e6f5ddb9954c442b77a10bc202)